--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
 
 
 .header, .footer {
-    background: #004080;
+    background: #8B4513;
     color: white;
     padding: 1rem;
 }
@@ -59,29 +59,29 @@ nav.navbar-buttons {
 }
 
 .navbar-buttons button {
-    background: #929ea3;
+    background: #D4AF37;
     color: white;
     font-size: 15px;
 }
 
 .navbar-buttons button.active {
-    background: #0096C7;
+    background: #B8860B;
 }
 
 .subheader h3 {
     margin: 0;
-    color: rgb(11, 138, 188);
+    color: #8B4513;
     font-size: 1.5rem;
 }
 
 .subheader button.active {
-    background-color: #929ea3;
+    background-color: #B8860B;
     color: white;
 }
 
 h2 {
     margin-top: 1rem;
-    color: #004080;
+    color: #8B4513;
     font-size: 2rem;
 }
 
@@ -111,7 +111,7 @@ form input, form select {
 }
 form button {
     padding: 0.5rem 1rem;
-    background: #004080;
+    background: #8B4513;
     color: white;
     border: none;
     cursor: pointer;
@@ -119,7 +119,7 @@ form button {
 }
 
 button {
-    background-color: #25aa4d;
+    background-color: #D4AF37;
     color: white;
     border: none;
     padding: 0.5rem 1rem;
@@ -128,7 +128,7 @@ button {
 }
 
 button:hover {
-    background-color: #878d8f;
+    background-color: #B8860B;
     transition: ease 0.3s;
     color: white;
     transform: scale3d(1.05, 1.05, 1);
